*SVN*

* Support :render option for :verify #1440 [TobiasLuetke]

* Updated vendor copy of html-scanner lib to 0.5.1, for bug fixes and optimizations

* Changed test requests to come from 0.0.0.0 instead of 127.0.0.1 such that they don't trigger debugging screens on exceptions, but instead call rescue_action_in_public

* Modernize scaffolding to match the generator: use the new render method and change style from the warty @params["id"] to the sleek params[:id].  #1367

* Include :id in the action generated by the form helper method.  Then, for example, the controller can do Model.find(params[:id]) for both edit and update actions.  Updated scaffolding to take advantage.  #1367

* Add assertions with friendly messages to TestCase#process to ensure that @controller, @request, and @response are set.  #1367

* Arrays sent via multipart posts are converted to strings #1032 [dj@omelia.org]

* render(:layout => true) is a synonym for render(:layout => nil)

* Make sure the benchmarking render method always returns the output of the render.

* render(:action) and render() are the only two calls that default to using a layout. All other render calls assume :layout => false. This also fixes send_file, which was applying a layout if one existed for the current action.

* verify with :redirect_to won't redirect if a redirect or render has already been performed #1350

* render(:partial => true) is identical to the behavior of the deprecated render_partial()

* Fixed render(:partial => "...") to use an empty Hash for the local assigns #1365

* Fixed Caching::Fragments::FileStore.delete to not raise an exception if the delete fails.

* Deprecated all render_* methods in favor of consolidating all rendering behavior in Base#render(options). This enables more natural use of combining options, such as layouts. Examples:

    +---------------------------------------------------------------+-------------------------------------------------------+